Textarea, z-index, _blank, and transition fix

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -19,7 +19,7 @@
       &::before {
         position: relative;
         top: 50%;
-        transform: translate(-100%, 75%);
+        transform: translate(-80%, 75%);
         display: block;
         content: "+1 234 555-55-55";
         width: max-content;
@@ -32,10 +32,12 @@
         text-transform: uppercase;
         opacity: 0;
         pointer-events: none;
+        transition: opacity 0.5s, transform 0.5s;
       }
       
       &:hover::before {
         opacity: 1;
+        transform: translate(-100%, 75%);
         pointer-events: all;
       }
     }
