--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,13 +1,23 @@
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
 .page {
   font-family: "Roboto", sans-serif;
   scroll-behavior: smooth;
   font-weight: normal;
   font-size: 16px;
   line-height: 27px;
+  
   color: #3e3e3e;
 
   &__body {
-    background: $c-gray;
+    background: #fff;
     margin: 0;
   }
 
