--- a/src/styles/blocks/place.scss
+++ b/src/styles/blocks/place.scss
@@ -8,7 +8,7 @@
     padding-bottom: 100%;
     max-height: 256px;
     overflow: hidden;
-    transition: transform 1s;
+    transition: transform 0.5s;
 
     &::after {
       content: "";
@@ -22,7 +22,7 @@
     }
 
     &:hover {
-      transform: scale(1.1);
+      transform: scale(1.03);
       z-index: 1;
     }
   }
